# mealdb_api

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: mealdb_api.rst  modules.rst
mealdb_api/: mealdb_api.py
tests/: test_mealdb_api.py
vignettes/: how_to_mealdb_api.ipynb
